--- a/app/src/main/res/drawable/btn_bg.xml
+++ b/app/src/main/res/drawable/btn_bg.xml
@@ -1,8 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
-    <gradient android:startColor="#E711FF"
-        android:endColor="#510180"
-        android:angle="-90"/>
-
+    <solid android:color="#cddafd"/>
     <corners android:radius="20dp"/>
 </shape>
