--- a/app/src/main/res/layout/activity_login_screen.xml
+++ b/app/src/main/res/layout/activity_login_screen.xml
@@ -42,6 +42,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginHorizontal="40dp"
+        android:padding="15dp"
         android:layout_marginTop="20dp"
         android:drawableStart="@drawable/password"
         android:drawablePadding="20dp"
