--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,9 +1,9 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
-    <style name="Theme.ChatApp" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
+    <style name="Theme.ChatApp" parent="Theme.MaterialComponents.DayNight.NoActionBar">
         <!-- Primary brand color. -->
-        <item name="colorPrimary">@color/mine</item>
-        <item name="colorPrimaryVariant">#8B00DC</item>
+        <item name="colorPrimary">@color/myGreen</item>
+        <item name="colorPrimaryVariant">@color/myGreen</item>
         <item name="colorOnPrimary">#000000</item>
         <item name="android:windowBackground">#ffffff</item>
         <!-- Secondary brand color. -->
