--- a/app/src/main/res/layout/fragment_profile_screen.xml
+++ b/app/src/main/res/layout/fragment_profile_screen.xml
@@ -5,11 +5,12 @@
     android:layout_height="match_parent"
     tools:context=".FragmentScreen.ProfileScreen">
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:text="Profile"
-        android:textSize="25sp" />
+        android:background="@color/mine">
+
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
 </FrameLayout>
