--- a/app/src/main/res/layout/activity_sign_up_screen.xml
+++ b/app/src/main/res/layout/activity_sign_up_screen.xml
@@ -6,27 +6,37 @@
     android:layout_height="match_parent"
     tools:context=".Screens.SignUpScreen">
 
-    <ImageView
+    <androidx.cardview.widget.CardView
+        android:id="@+id/cardViewForImage"
+        android:layout_width="260dp"
+        android:layout_height="260dp"
         android:layout_margin="10dp"
         android:elevation="20dp"
-        android:id="@+id/handShakeIv"
-        android:layout_width="300dp"
-        android:layout_height="300dp"
-        android:src="@drawable/hand_shake"
+        app:cardCornerRadius="130dp"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent">
+
+        <ImageView
+            android:id="@+id/signUpUserImg"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:contentDescription="@string/user_image"
+            android:src="@drawable/person" />
+
+    </androidx.cardview.widget.CardView>
 
     <TextView
         android:id="@+id/signupTv"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginHorizontal="40dp"
+        android:layout_marginTop="10dp"
         android:fontFamily="@font/bangers"
         android:text="@string/sign_up"
         android:textColor="@color/headings"
         android:textSize="48sp"
-        app:layout_constraintTop_toBottomOf="@id/handShakeIv" />
+        app:layout_constraintTop_toBottomOf="@id/cardViewForImage" />
 
     <EditText
         android:id="@+id/fullNameTv"
@@ -87,15 +97,15 @@
         android:id="@+id/signUpBtn"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:layout_constraintBottom_toTopOf="@id/loginTv"
         android:layout_marginHorizontal="40dp"
+        android:layout_marginBottom="10dp"
         android:background="@drawable/btn_bg"
+        android:fontFamily="@font/lemonada"
         android:padding="15dp"
         android:text="@string/sign_up"
-        android:textSize="20sp"
         android:textColor="@color/white"
-        android:layout_marginBottom="10dp"
-        android:fontFamily="@font/lemonada"/>
+        android:textSize="20sp"
+        app:layout_constraintBottom_toTopOf="@id/loginTv" />
 
 
     <LinearLayout
@@ -120,13 +130,13 @@
         <TextView
             android:id="@+id/loginTv1"
             android:layout_width="0dp"
+            android:layout_height="wrap_content"
             android:layout_marginStart="2dp"
             android:layout_weight="1"
-            android:layout_height="wrap_content"
             android:fontFamily="@font/atma_medium"
             android:text="@string/login1"
-            android:textColor="@color/mine"
             android:textAlignment="textStart"
+            android:textColor="@color/mine"
             android:textSize="20sp" />
     </LinearLayout>
 
