--- a/app/src/main/res/layout/activity_detailed_chat.xml
+++ b/app/src/main/res/layout/activity_detailed_chat.xml
@@ -6,6 +6,16 @@
     android:layout_height="match_parent"
     tools:context=".Screens.DetailedChat">
 
+    <ProgressBar
+        android:layout_width="40dp"
+        android:layout_height="40dp"
+        android:id="@+id/progressBar"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:visibility="gone"/>
+
     <com.google.android.material.appbar.AppBarLayout
         android:id="@+id/appBarLayout1"
         android:layout_width="match_parent"
@@ -74,7 +84,7 @@
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/appBarLayout1"
-        tools:listitem="@layout/chat_item" />
+        tools:listitem="@layout/item_text_out" />
 
     <EditText
         android:id="@+id/msgEt"
@@ -82,16 +92,24 @@
         android:layout_height="wrap_content"
         android:layout_marginHorizontal="10dp"
         android:textSize="20sp"
+        android:layout_marginVertical="10dp"
+        android:padding="14dp"
+        android:textColor="@color/white"
+        android:background="@drawable/msg_et_bg"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toLeftOf="@id/sendBtn"
-        tools:text="Hello g kaise ho" />
+        android:hint="@string/enter_a_message"
+        android:textColorHint="@color/white"
+        android:autofillHints="Say Hii.." />
 
     <ImageButton
         android:id="@+id/sendBtn"
         android:layout_width="40dp"
         android:layout_height="40dp"
-        android:layout_marginRight="10dp"
+        android:layout_marginEnd="10dp"
+        android:background="@drawable/msg_et_bg"
+        android:padding="10dp"
         android:src="@drawable/ic_baseline_send_24"
         app:layout_constraintBottom_toBottomOf="@id/msgEt"
         app:layout_constraintLeft_toRightOf="@id/msgEt"
