--- a/app/src/main/res/layout/fragment_chats_screen.xml
+++ b/app/src/main/res/layout/fragment_chats_screen.xml
@@ -11,6 +11,16 @@
         android:layout_height="match_parent"
         android:background="@color/mine">
 
+        <ProgressBar
+            android:layout_width="40dp"
+            android:visibility="gone"
+            android:layout_height="40dp"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
+            android:id="@+id/progressBar1"/>
+
         <androidx.recyclerview.widget.RecyclerView
             android:layout_width="match_parent"
             android:layout_height="match_parent"
